deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pterodactyl-panel
  namespace: default
  labels:
    app: pterodactyl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pterodactyl
  template:
    metadata:
      labels:
        app: pterodactyl
    spec:
      containers:
        - name: panel
          image: ghcr.io/pterodactyl/panel:v1.11.10
          ports:
            - containerPort: 80    # Porta HTTP
            - containerPort: 443   # Porta HTTPS
          resources:
            requests:
              memory: "1Gi"
              cpu: "512m"
            limits:
              memory: "2Gi"
              cpu: "2"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 600
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 600
            periodSeconds: 10
#          volumeMounts:
#            - name: nginx-config
#              mountPath: /etc/nginx/http.d/panel.conf  # Montando o arquivo no diretório correto
#              subPath: panel.conf                      # Assegura que o arquivo é montado com o nome correto
      volumes:
        - name: panel-data
          persistentVolumeClaim:
            claimName: pterodactyl-panel-pvc
        - name: ssl-certificates
          secret:
            secretName: pterodactyl-ssl-certificates
        - name: nginx-config
          configMap:
            name: pterodactyl-nginx-config  # Referência ao ConfigMap criado
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: default
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.0
          ports:
            - containerPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pterodactyl-mysql
  namespace: default
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mariadb:10.6
          ports:
            - containerPort: 3306
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pterodactyl-wings
  namespace: default
  labels:
    app: pterodactyl-wings
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pterodactyl-wings
  template:
    metadata:
      labels:
        app: pterodactyl-wings
    spec:
      containers:
        - name: pterodactyl-wings
          image: ghcr.io/pterodactyl/wings:v1.11.10
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: default
spec:
  ports:
    - name: redis-port
      port: 6379
      targetPort: 6379
  selector:
    app: redis
---
apiVersion: v1
kind: Service
metadata:
  name: pterodactyl-mysql
  namespace: default
spec:
  ports:
    - name: mysql-port
      port: 3306
      targetPort: 3306
  selector:
    app: mysql
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-controller
  namespace: ingress-nginx
spec:
  selector:
    app: ingress-nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: pterodactyl-panel
  namespace: default
spec:
  selector:
    app: pterodactyl
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: pterodactyl-wings
  namespace: default
spec:
  ports:
    - name: wings-port
      port: 8080
      targetPort: 8080
  selector:
    app: pterodactyl-wings
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pterodactyl-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  rules:
    - host: hostmaster.myvnc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pterodactyl-panel
                port:
                  number: 80
  tls:
    - hosts:
        - hostmaster.myvnc.com
      secretName: pterodactyl-tls
